--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react-router-dom": "^7.10.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
-    "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
