--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^3.4.18"
+    "@types/react-dom": "^19.2.3"
   }
 }
